# anime_store

./: .env.dist  README.md  pyproject.toml
mysite/: settings.py  urls.py
store/: admin.py  forms.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py
store/static/css/: store.css
store/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register_done.html  registr.html
store/templates/store/: base.html  favorite.html  index.html  product_detail.html  products.html  shop_cart.html
