[tool.poetry]
name = "anime_store"
version = "0.1.0"
description = "My portfolio project. Anime store in Django"
authors = ["waydk <waydk.note@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
